# MuV

./: README.md
muv-client/: build.gradle  config.gradle  gradle.properties  keystore.properties  micro.gradle  settings.gradle  versions.gradle
muv-client/app/: build.gradle  proguard-rules.pro
muv-client/doc/: newx.jks
muv-client/host/: build.gradle
muv-client/keystore/: newx.jks
muv-client/lib-common/: build.gradle  proguard-rules.pro
muv-client/lib-compiler/: build.gradle
muv-client/lib-replugin-host/: bintray.gradle  build.gradle
muv-client/lib-replugin-plugin/: bintray.gradle  build.gradle  local.properties
muv-client/lib_armv64/: build.gradle
muv-client/lib_armv7a/: build.gradle
muv-client/lib_base/: build.gradle
muv-client/lib_camera/: build.gradle  proguard-rules.pro
muv-client/lib_entity/: build.gradle
muv-client/lib_media/: build.gradle
muv-client/lib_res/: build.gradle
muv-client/lib_service/: build.gradle
muv-client/lib_so/: CMakeLists.txt  build.gradle
muv-client/lib_so/src/main/: AndroidManifest.xml
muv-client/lib_so/src/main/cpp/: EncryptJni.cpp
muv-client/lib_so/src/main/java/com/newx/jni/: EncryptJni.java
muv-client/lib_test/: build.gradle
muv-client/module_app/: build.gradle
muv-client/module_camera/: build.gradle
muv-client/module_main/: build.gradle
muv-client/module_player/: build.gradle
muv-client/module_user/: build.gradle
muv-server/: filenewx-db.sql  pom.xml
muv-server/sql/: db.sql  muv_db.sql
muv-web/: package.json
muv-web/config/: index.js
muv-web/src/: Global.vue  main.js  (+1 more)
(+1739 files in other folders)
